[tool.poetry]
name = "ps-discord-slash-python"
version = "0.1.0"
description = ""
authors = ["Victor <vdcommits@outlook.com>"]
readme = "README.md"
packages = [{include = "ps_discord_slash_python"}]

[tool.poetry.dependencies]
python = "^3.12"
PyNaCl="1.5.0"
jsonpickle="2.1.0"
boto3="1.21.34"
pytz="2022.1"
python-dateutil="2.8.2"
requests="2.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
