[tool.poetry]
name = "ps-discord-slash-python"
version = "0.1.0"
description = ""
authors = ["Victor <vdcommits@outlook.com>"]
readme = "README.md"
packages = [{include = "ps_discord_slash_python"}]

[tool.poetry.dependencies]
python = "^3.12"
PyNaCl="1.5.0"
jsonpickle="3.3.0"
pytz="2024.2"
python-dateutil="2.9.0.post0"
requests="2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
